--- a/Commandliner/Commandliner.csproj
+++ b/Commandliner/Commandliner.csproj
@@ -18,4 +18,7 @@
     <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.5" />
   </ItemGroup>
 
+	<Target Name="PrePublishTarget" AfterTargets="Publish">
+		<Exec Command="dotnet ef database update" />
+	</Target>
 </Project>
