Added dotnet tool restore command to .csproj

--- a/Commandliner/Commandliner.csproj
+++ b/Commandliner/Commandliner.csproj
@@ -20,5 +20,6 @@
 
 	<Target Name="PrePublishTarget" AfterTargets="Publish">
 		<Exec Command="dotnet ef database update" />
+		<Exec Command="dotnet tool restore" />
 	</Target>
 </Project>
