--- a/Commandliner/Properties/launchSettings.json
+++ b/Commandliner/Properties/launchSettings.json
@@ -13,14 +13,14 @@
       "commandName": "IISExpress",
       "launchUrl": "/",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Commandliner": {
       "commandName": "Project",
       "launchUrl": "/",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
